--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "0.0.0",
   "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
   "engines": {
-    "node": ">= 14.15 <15"
+    "node": "16.x"
   },
   "devDependencies": {
-    "@types/jest": "~26.0.19",
-    "@types/node": "~14.14.20",
-    "@typescript-eslint/eslint-plugin": "~4.12.0",
-    "@typescript-eslint/parser": "~4.12.0",
-    "eslint": "~7.17.0",
-    "eslint-config-prettier": "~7.1.0",
-    "eslint-plugin-jest": "~24.1.3",
-    "jest": "~26.6.3",
-    "prettier": "~2.2.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "~28.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
+    "@types/node": "~18.0.6",
+    "@types/paypal-rest-sdk": "^1.7.6",
+    "@typescript-eslint/eslint-plugin": "~5.30.7",
+    "@typescript-eslint/parser": "~5.30.7",
+    "eslint": "~8.20.0",
+    "eslint-config-prettier": "~8.5.0",
+    "eslint-plugin-jest": "~26.6.0",
+    "jest": "~28.1.3",
+    "prettier": "~2.7.1",
     "rimraf": "~3.0.2",
-    "ts-jest": "~26.4.4",
-    "tsutils": "~3.18.0",
-    "typescript": "~4.1.3"
+    "ts-jest": "~28.0.7",
+    "tsutils": "~3.21.0",
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "start": "node build/src/main.js",
+    "dev": "nodemon build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
@@ -29,12 +37,21 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
-  "author": "Jakub Synowiec <github@jakubsynowiec.info>",
+  "author": "iankiptala <iankiptala@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "tslib": "~2.0.3"
-  },
-  "volta": {
-    "node": "14.15.0"
+    "@prisma/client": "^4.1.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.19",
+    "paypal-rest-sdk": "^1.8.1",
+    "prisma": "^4.1.0"
   }
 }
